--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "twitter": "^1.7.1"
   },
   "prettier": {
-    "printWidth": 100
+    "printWidth": 100,
+    "endOfLine": "lf",
+    "semi": false
   }
 }
