--- a/functions/package.json
+++ b/functions/package.json
@@ -1,20 +1,17 @@
 {
   "name": "functions",
-  "private": true,
-  "version": "1.0.0",
-  "repository": "ssh://git@github.com/medalhkr/sbox_twitter_ts",
-  "author": "medalhkr <medalhkr@gmail.com>",
-  "license": "MIT",
   "engines": {
     "node": "8"
   },
   "scripts": {
     "build": "tsc",
-    "start": "yarn run shell",
+    "serve": "npm run build && firebase serve --only functions",
+    "shell": "npm run build && firebase functions:shell",
+    "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
-  "main": "lib/main.js",
+  "main": "lib/index.js",
   "dependencies": {
     "express": "^4.16.4",
     "firebase-admin": "~7.0.0",
@@ -22,14 +19,8 @@
     "twitter": "^1.7.1"
   },
   "devDependencies": {
-    "@google-cloud/functions-emulator": "^1.0.0-beta.5",
     "@types/express": "^4.16.1",
-    "prettier": "^1.16.3",
     "typescript": "^3.2.2"
   },
-  "prettier": {
-    "printWidth": 100,
-    "endOfLine": "lf",
-    "semi": false
-  }
+  "private": true
 }
