--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "devDependencies": {
-    "@google-cloud/functions-emulator": "^1.0.0-beta.5",
-    "firebase-tools": "^6.3.1"
+  "prettier": {
+    "printWidth": 100,
+    "endOfLine": "lf",
+    "semi": false
   }
 }
